--- a/01_cli_interactive_sort/package.json
+++ b/01_cli_interactive_sort/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ry6ens/serverless-academy.git"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "bugs": {
