--- a/01_cli_primitive_db/package.json
+++ b/01_cli_primitive_db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "03_cli_telegram_console_sender",
+  "name": "01_cli_primitive_db",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,8 +18,6 @@
   },
   "homepage": "https://github.com/Ry6ens/serverless-academy#readme",
   "dependencies": {
-    "commander": "^10.0.0",
-    "dotenv": "^16.0.3",
-    "node-telegram-bot-api": "^0.61.0"
+    "inquirer": "^8.2.5"
   }
 }
