--- a/02_cli_telegram_console_sender/package.json
+++ b/02_cli_telegram_console_sender/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "02_cli_primitive_db",
+  "name": "02_cli_telegram_console_sender",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Ry6ens/serverless-academy#readme",
   "dependencies": {
-    "inquirer": "^8.2.5"
+    "commander": "^10.0.0",
+    "dotenv": "^16.0.3",
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
