--- a/03_cli_telegram_bot_weather_forecast/package.json
+++ b/03_cli_telegram_bot_weather_forecast/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/Ry6ens/serverless-academy#readme",
   "dependencies": {
     "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
     "node-telegram-bot-api": "^0.61.0"
   }
 }
